[package]
name = "morton"
version = "0.2.0"
authors = ["Reinier Maas <reiniermaas@hotmail.com>"]

# METADATA
description = "morton iterator for rust"
documentation = "https://github.com/ReinierMaas/morton/"
homepage = "https://github.com/ReinierMaas/morton/"
repository = "https://github.com/ReinierMaas/morton/"
readme = "README.md"
keywords = ["morton", "iterator", "cache-coherence", "spatial-locality", "data-locality"]
categories = ["algorithms", "caching", "data-structures", "game-engines", "memory-management"]
license = "MIT"

# Optional specification of badges to be displayed on crates.io. The badges
# currently available are Travis CI and Appveyor latest build status, specified
# using the following parameters:
# [badges]
# Travis CI: `repository` is required. `branch` is optional; default is `master`
# travis-ci = { repository = "...", branch = "master" }
# Appveyor: `repository` is required. `branch` is optional; default is `master`
# `service` is optional; valid values are `github` (default), `bitbucket`, and
# `gitlab`.
# appveyor = { repository = "...", branch = "master", service = "github" }

# PROFILES
# The development profile, used for `cargo build | run`.
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

# The release profile, used for `cargo build | run --release`.
[profile.release]
opt-level = 3
lto = true

# The testing profile, used for `cargo test`.
[profile.test]
opt-level = 0
debug = true
debug-assertions = true

# The benchmarking profile, used for `cargo bench`.
[profile.bench]
opt-level = 3
lto = true

[dependencies]

[dev-dependencies]
rand = "0.3.15"