[package]
name = "morton"
version = "0.3.0"
authors = ["Reinier Maas <reiniermaas@hotmail.com>"]
edition = "2018"

description = "Morton space filling curve functions"
documentation = "https://docs.rs/morton/"
homepage = "https://github.com/ReinierMaas/morton/"
repository = "https://github.com/ReinierMaas/morton/"
readme = "README.md"
keywords = ["morton", "iterator", "cache-coherence", "spatial-locality", "data-locality"]
categories = ["algorithms", "caching", "data-structures", "game-engines", "memory-management"]
license = "MIT"

[[bench]]
harness = false
name = "morton"

[dev-dependencies]
bencher = "0.1"
rand = "0.7"

[lints.clippy]
cargo =  { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
# nursery, new untested lints
nursery = { level = "allow", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
# restriction, lints that can enforce a coherent code style
restriction = { level = "allow", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Explicitly selected `restriction` lints
mod_module_files = "deny"

[profile.release]
lto = true

[profile.bench]
lto = true
